Fixed issue with nested rows not wrapping.

--- a/sass/birdhouse.scss
+++ b/sass/birdhouse.scss
@@ -34,7 +34,7 @@
     @include birdhouse-border-box;
 }
 
-.birdhouse .row, .r {
+.birdhouse .row, .birdhouse .r {
   padding: 0;
   margin: 0;
   display: -ms-flexbox;
@@ -66,7 +66,6 @@
       -ms-flex-preferred-size: 100%;
       -webkit-flex-basis: 100%;
       flex-basis: 100%;
-      display: inline-flex;
     }
   }
 
@@ -84,7 +83,6 @@
       -ms-flex-preferred-size: 100%;
       -webkit-flex-basis: 100%;
       flex-basis: 100%;
-      display: inline-flex;
     }
   }
 }
